# omnisect

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflow/: publish-pyproject.yml
.github/workflows/: run-tests.yml
deployment/ci/py/scripts/: run-publish.sh  run-tests.sh
deployment/local/: down.sh  up.sh
deployment/local/project/: docker-compose.yml
omnisect/: app.yaml  app_config.py  fs_config.py  omnisect-instruction-prompt.md  omnisect-instructions-prompt.md  pyproject.toml
omnisect/_test_files/: configuration.yaml
omnisect/cli/: __init__.py  dbdrop.py  dbinit.py
omnisect/db/: config.py  mixins.py
omnisect/db/repository/: base_repo.py  data_repo.py
omnisect/db/session/: session.py
omnisect/di/: providers.py
omnisect/ioc/: __init__.py  application_provider.py  infrastructure_provider.py  provider_registry.py  providers.py  registry.py
omnisect/plugins/: helpers.py  models.py  plugin_use_case_service.py  utils.py
omnisect/plugins/core/: __init__.py  iplugin.py  iplugin_registry.py
omnisect/plugins/plugins/narxoz_faq_plugin/: config.yaml  main.py
omnisect/plugins/plugins/narxoz_faq_plugin/config/: faq_data.json  greetings.json  prompts.json
omnisect/plugins/plugins/news_moth/: config.yaml  main.py
omnisect/plugins/plugins/risk_firefly/: config.yaml  main.py
omnisect/plugins/plugins/risk_firefly/models/: gradient_boosting_model.pkl  predict_delay.py  scaler.pkl
omnisect/plugins/plugins/sample_plugin/: main.py
omnisect/plugins/plugins/syllabus_weaver/: config.yaml  main.py  models.py  utils.py
omnisect/plugins/plugins/syllabus_weaver/templates/narxoz/: eng.docx
omnisect/plugins/plugins/syllabus_weaver/tests/: plugin_fixtures.py  sample_data.py  test_syllabus_weaver.py  test_syllabus_weaver_utils.py
omnisect/src/: utils.py
omnisect/src/dto/: plugin_dto.py
omnisect/src/errors/: core_errors.py
omnisect/src/errors/types/: __init__.py
omnisect/src/proxies/: llm_provider_proxy.py  transcriber_proxy.py
omnisect/src/services/: plugin_service.py
omnisect/tests/: base_test.py
omnisect/tests/fixtures/: file_fixtures.py
omnisect/tests/plugins/: test_helpers.py  test_plugin_use_case_service.py  test_utils.py
omnisect/tests/plugins/plugins/sample_plugin/: config.yaml  main.py
omnisect/tests/src/service/: test_plugin_service.py
omnisect/tests/web/router/: test_plugin_router.py
omnisect/utils/: __init__.py  read_config_file.py
omnisect/web/: app.py
omnisect/web/errors/: handler.py
omnisect/web/routers/: plugins_router.py
(+2 files in other folders)
